# Darwix_AI_Hackathon

./: Final_notebook.ipynb  README.md  pyproject.toml  requirements.txt
