[project]
name = "agenticlanggraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckduckgo-search>=8.1.1",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.7",
    "langchain-groq>=0.3.5",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.1",
    "langgraph-cli[inmem]>=0.3.4",
    "langsmith>=0.4.4",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "youtube-transcript-api>=1.1.1",
]
